--- a/src/index.html
+++ b/src/index.html
@@ -16,4 +16,6 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
